--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,31 @@
+/* src/app.css */
 @import '@nativescript/theme/css/core.css';
 @import '@nativescript/theme/css/default.css';
 
-Button.-primary {
-  font-size: 18;
+/* applied when device is in light mode */
+.ns-light .bg-primary {
+  background-color: #fdfdfd;
+}
+.ns-light .bg-secondary {
+  background-color: #ffffff;
+}
+.ns-light .text-primary {
+  color: #212121;
+}
+.ns-light .text-secondary {
+  color: #212121;
+}
+
+/* applied when device is in dark mode */
+.ns-dark .bg-primary {
+  background-color: #212121;
+}
+.ns-dark .bg-secondary {
+  background-color: #383838;
+}
+.ns-dark .text-primary {
+  color: #fdfdfd;
+}
+.ns-dark .text-secondary {
+  color: #fdfdfd;
 }
