--- a/src/app/features/survey/survey.component.html
+++ b/src/app/features/survey/survey.component.html
@@ -1,28 +1,47 @@
+<!-- src/app/features/details/survey.component.html -->
+
 <ActionBar title="In-Situ Survey"></ActionBar>
 
+ <!-- Flexible survey page -->
+
 <ScrollView height="100%">
-  <StackLayout *ngIf="place">
-    <StackLayout padding="10 20">
-      <Label
-        marginTop="15"
-        fontSize="25"
-        fontWeight="500"
-        class="text-primary"
-        textWrap="true"
-        [text]="place?.survey[0]?.questions[currentQuestionIndex]?.question"
-      ></Label>
-      <StackLayout orientation="horizontal">
-        <ng-container *ngFor="let answer of place?.survey[0]?.questions[currentQuestionIndex]?.answers">
-          <Label
-            fontSize="30"
-            class="text-secondary"
-            textAlignment="center"
-            [text]="answer"
-            (click)="onAnswerSelected(answer)"
-          ></Label>
-        </ng-container>
-      </StackLayout>
-      <Button text="Next Question" (click)="onNextQuestion()" *ngIf="selectedAnswer && currentQuestionIndex < place?.survey[0]?.questions.length - 1"></Button>
-    </StackLayout>
+  <StackLayout>
+    <StackLayout padding="10" >
+
+<!-- DISPLAYING NEXT QUESTION ON EMOJI TAP    -->
+   
+<Label
+*ngIf="currentQuestionIndex < survey[0].questions.length"
+fontSize="17"
+fontWeight="700"
+class="text-primary"
+padding="0"
+textWrap="true"
+textAlignment="center"
+[text]="survey[0].questions[currentQuestionIndex].question"
+></Label>
+<StackLayout orientation="horizontal" *ngIf="currentQuestionIndex < survey[0].questions.length">
+<ng-container *ngFor="let answer of survey[0].questions[currentQuestionIndex].answers">
+  <button
+    fontSize="23"
+    padding = 5
+    class="text-secondary"
+    [text]="answer.emoji"
+    (tap)="onEmojiSelected(survey[0].questions[currentQuestionIndex].id, answer.value)"
+  ></button>
+</ng-container>
+</StackLayout>
+<Label
+*ngIf="currentQuestionIndex >= survey[0].questions.length"
+fontSize="17"
+fontWeight="700"
+fontWeight="700"
+textAlignment="center"
+textWrap="true"
+text = "Thank you for answering this survey, see you on the next one"
+></Label>
+
+ 
+  </StackLayout>
   </StackLayout>
 </ScrollView>
